# ems-analyst

./: .coverage.thinkpad.91627.XrZBqLjx  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  cfg.yml  mypy.ini  pyproject.toml  readme.md  ruff.toml  template-secrets.env
scripts/: regen_demo_csv.py
src/: app_controller.py  app_module.py  db.py
src/chat/: chat_controller.py  chat_module.py  chat_service.py  dto.py
src/conversations/: __init__.py  conversation_controller.py  conversation_service.py  conversation_service_test.py  conversation_store.py  dto.py
src/demo/: demo_data.py  demo_data_test.py
src/description/: description_controller.py  description_module.py  description_service.py  dto.py
src/devices/: devices_controller.py  devices_module.py  devices_service.py  dto.py
src/ems_analyst_agent/: __init__.py  __main__.py  cfg.defaults.yml  cfg.yml  config.py  config_test.py  demo_seed.py  eval.py  eval_mcp.py  eval_mcp_cases.py  eval_mcp_scoring.py  eval_mcp_test.py  eval_report.py  eval_report_test.py  eval_seed.py  lib.py  lib_test.py  schemas.py  schemas_test.py  server.py  server_client.py  server_test.py  timeseries.py  topology.py  topology_test.py  turn.py  turn_test.py
src/ems_analyst_agent/demo_data/: measurements.csv
src/ems_analyst_agent/memory/: __init__.py  memory_service.py
src/ems_analyst_agent/prompts/: __init__.py  system.md
src/ems_analyst_agent/prompts/responses/: explanation.md  recommendation.md  summary.md
src/ems_analyst_agent/prompts/tasks/: market_analysis.md  technical_analysis.md
src/ems_analyst_agent/tools/: __init__.py  _common.py  _common_test.py  domain_mcp.py  forecast.py  forecast_test.py  geopolitical.py  geopolitical_test.py  markets.py  markets_test.py  site_analytics.py  site_analytics_test.py  telemetry.py  telemetry_test.py  telemetry_tools.py  topology_tool.py  weather_api.py
src/ems_analyst_mcp/: __main__.py  cfg.defaults.yml  seed.py  test_config.py
src/ems_analyst_mcp/clients/: graphiti_client.py  graphiti_ollama.py  test_graphiti_client.py  test_rag_client.py
src/forecasts/: dto.py  forecasts_controller.py  forecasts_module.py  forecasts_service.py
src/measurements/: dto.py  measurements_controller.py  measurements_module.py  measurements_service.py
src/python_mcp_server/: __main__.py  config.py  seed.py  test_config.py
src/python_mcp_server/clients/: embedder.py  graphiti_client.py  rag_client.py  test_graphiti_bedrock.py  test_graphiti_client.py  test_rag_client.py
src/python_pydantic_ai/: __init__.py  config.py  lib.py
src/python_pydantic_ai/memory/: memory_service.py
tests/: __init__.py  test_app.py  test_conversation_store.py  test_demo_seed.py  test_description_route.py  test_description_service.py  test_devices_route.py  test_devices_service.py  test_forecasts_route.py  test_forecasts_service.py  test_graphiti_client_integration.py  test_integration.py  test_mcp_rag_search_integration.py  test_measurements_route.py  test_measurements_service.py  test_rag_client_integration.py  test_seed.py  test_seed_neptune.py  test_server_client.py  test_timeseries.py
tests/fixtures/: containers.py
