[project]
name = "ems-analyst-agent"
version = "1.0.0-beta"
requires-python = "==3.13.2"
dependencies = [
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "pydantic-ai>=0.0.49",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "httpx>=0.27.0",
    "python-mcp-server",
    "feedparser>=6.0.12",
]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.29",
    "bandit>=1.8.0",
    "black[d]>=26.3.1",
    "deptry>=0.23.0",
    "neo4j>=5.0.0",
    "pip>=26.1",
    "pip-audit>=2.6.1",
    "poethepoet>=0.32.0",
    "pook>=2.1.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "testcontainers[postgres]>=4.9.0",
    "ty>=0.0.18",
    "types-pyyaml>=6.0",
    "python-mcp-server",
]

[tool.poe.tasks]
depcheck = "deptry ."
format = "black ."
lint = "ruff check"
typecheck = "ty check"
audit-src = "bandit -r src/* -s B101"
audit-packages = "pip-audit --ignore-vuln GHSA-4xh5-x5gv-qwph --ignore-vuln CVE-2026-3219"
security = ["audit-src", "audit-packages"]
checks = ["depcheck", "format", "lint", "typecheck", "security"]
healthcheck = "bash -c 'curl -sf -o /dev/null -w \"OpenWeatherMap: %{http_code}\\n\" \"https://api.openweathermap.org/data/2.5/weather?q=London&appid=$OPENWEATHERMAP_API_KEY\" && echo APIS_READY'"
unit = "pytest -vv src/ems_analyst_agent"
integration = "pytest -vv tests/*"
cover = "pytest -vv --cov=src/ems_analyst_agent"
test = ["unit", "healthcheck", "integration"]
eval-live = "python -m ems_analyst_agent.eval"
eval-mcp = "python -m ems_analyst_agent.eval_mcp"
review = "claude 'run code-reviewer agent against diff for quality and elegance'"
commit = "bash -c 'uv run poe checks && uv run poe test && uv run poe review && git add -A && git cz && git push'"

[tool.deptry.per_rule_ignores]
DEP002 = ["python-mcp-server"]
DEP004 = ["pytest", "pook"]

[tool.coverage.run]
omit = ["*/test_*.py", "tests/*", "*/main.py", "*/config.py"]

[tool.setuptools.package-data]
# Bundle cfg.yml + prompt .md files in the wheel so config.load_config /
# prompts.load_system_prompt can find them when this package is consumed
# as a git dep from another project's venv (the repo root isn't
# accessible there). Same pattern as python-mcp-server.
ems_analyst_agent = ["cfg.yml", "prompts/*.md", "prompts/**/*.md"]

[tool.uv.sources]
python-mcp-server = { git = "https://gitlab.com/engineering-with-ai/python-mcp-server.git" }

